@@ -800,15 +800,20 @@ void BaseGui::createActions() {
 	// Video aspect
 	aspectGroup = new MyActionGroup(this);
 	aspectDetectAct = new MyActionGroupItem(this, aspectGroup, "aspect_detect", MediaSettings::AspectAuto);
-#if NEW_ASPECT_CODE
-	aspectNoneAct = new MyActionGroupItem(this, aspectGroup, "aspect_none", MediaSettings::AspectNone);
-#endif
 	aspect43Act = new MyActionGroupItem(this, aspectGroup, "aspect_4:3", MediaSettings::Aspect43);
 	aspect54Act = new MyActionGroupItem(this, aspectGroup, "aspect_5:4", MediaSettings::Aspect54 );
 	aspect149Act = new MyActionGroupItem(this, aspectGroup, "aspect_14:9", MediaSettings::Aspect149 );
 	aspect169Act = new MyActionGroupItem(this, aspectGroup, "aspect_16:9", MediaSettings::Aspect169 );
 	aspect1610Act = new MyActionGroupItem(this, aspectGroup, "aspect_16:10", MediaSettings::Aspect1610 );
 	aspect235Act = new MyActionGroupItem(this, aspectGroup, "aspect_2.35:1", MediaSettings::Aspect235 );
+#if NEW_ASPECT_CODE
+	{
+		QAction * sep = new QAction(aspectGroup);
+		sep->setSeparator(true);
+	}
+	aspectNoneAct = new MyActionGroupItem(this, aspectGroup, "aspect_none", MediaSettings::AspectNone);
+#endif
+
 #if !NEW_ASPECT_CODE
 	QAction * aspect_separator = new QAction(aspectGroup);
 	aspect_separator->setSeparator(true);
@@ -1265,16 +1270,17 @@ void BaseGui::retranslateStrings() {
 	denoise_menu->menuAction()->setIcon( Images::icon("denoise") );
 	*/
 
-	aspectDetectAct->change( tr("&Autodetect") );
-#if NEW_ASPECT_CODE
-	aspectNoneAct->change( tr("&None") );
-#endif
+	aspectDetectAct->change( tr("&Auto") );
 	aspect43Act->change( "&4:3" );
 	aspect54Act->change( "&5:4" );
 	aspect149Act->change( "&14:9" );
 	aspect169Act->change( "16:&9" );
 	aspect1610Act->change( "1&6:10" );
 	aspect235Act->change( "&2.35:1" );
+#if NEW_ASPECT_CODE
+	aspectNoneAct->change( tr("&Disabled") );
+#endif
+
 #if !NEW_ASPECT_CODE
 	aspect43LetterAct->change( tr("4:3 &Letterbox") );
 	aspect169LetterAct->change( tr("16:9 L&etterbox") );
